<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/nextButton">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="73.62dp"
            android:layout_height="116.31dp"
            android:layout_above="@+id/welcomeText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="Logo Image"
            app:srcCompat="@drawable/light_icon" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#71ADB5"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_msg"
            android:textAlignment="viewStart"
            android:textColor="#C6C6C6"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/welcomeMsg_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeMsg"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_msg_start"
            android:textAlignment="center"
            android:textColor="#C6C6C6"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/nextButton"
        style="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_rounded_accent"
        android:fontFamily="@font/roboto"
        android:text="@string/button_start"
        android:textColor="#FFF"
        android:textSize="18sp" />
</RelativeLayout>