<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_wizard_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:indeterminateDrawable="@drawable/progress_bar_thin_finished"
            android:progress="100" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="85.76dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="68dp"
            app:srcCompat="@drawable/check" />

        <TextView
            android:id="@+id/wifiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="43.53dp"
            android:fontFamily="@font/roboto"
            android:text="@string/finished"
            android:textAlignment="center"
            android:textColor="#71ADB5"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/wizard_slide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wifiName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/device_finished"
            android:textAlignment="viewStart"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/finshButton"
        style="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_rounded_accent"
        android:fontFamily="@font/roboto"
        android:text="@string/finish"
        android:textColor="#FFF"
        android:textSize="18sp" />

</RelativeLayout>